fix header overlap text

--- a/_sass/bootstrap/_grid.scss
+++ b/_sass/bootstrap/_grid.scss
@@ -9,7 +9,14 @@
 
 body {
   min-height: 101vh;
+  padding-top: 60px;
 }
+@media (max-width: 979px) {
+  body {
+    padding-top: 0px;
+  }
+}
+
 
 .intrinsic-container {
   -webkit-overflow-scrolling: touch;
